Fixed alignment issues on body

--- a/public/index.css
+++ b/public/index.css
@@ -8,6 +8,10 @@ body {
   font-family: 'Karla', sans-serif;
   color: #293264;
   background-color: #F5F7FB;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
 }
 button {
   font-family: 'Inter', sans-serif;
